#                    #
######################
New features and other changes:
1. Added AppNames config item and added function Stop-AppService.
2. Added function Set-FirefoxAutoUpdate. Defaults to disable. Add -Enable to enable.
3. Changed Convert-DaysToWorkDay to use new config item Holidays.
4. Added function Show-FederalHoliday.
5. Fixed issue with BigIP install in InstallRemote.ps1.

######################
#                    #
#      2021.6.2      #
#                    #
######################
New features and other changes:
1. Added function Initialize-GPUpdate. Mostly for doing a gpupdate /force on remote computers. Must be ran as admin when doing a remote computer.
2. Added function Set-AxwayConfig.
3. Added functions Restart-AxwayTrayApp, Start-AxwayTrayApp, and Stop-AxwayTrayApp.

######################
#                    #
#      2021.6.1      #
#                    #
######################
New features and other changes:
1. Added some checks in InstallRemote.ps1 so if there are no Windows/Office updates, it skips those actions.
2. Changed versioning scheme. Will be using YYYY.MM.vv from now on. Where YYYY is year, MM is month, and vv is version for that month.
3. Added NetBanner install using newer version checking code to InstallRemote.ps1.
4. Added Encase install using newer version checking code to InstallRemote.ps1.
5. Added Transverse install using newer version checking code to InstallRemote.ps1.
6. Added ActiveDirectory as an ExternalModuleDependencies in manifest. While not needed for most things, it is required for some stuff.
7. Added VSCode config file items (bumped config item version.)
8. Added function Copy-VisualStudioCode (aka Copy-VSCode.)
9. Added function Install-VisualStudioCode (aka Install-VSCode.)
10. Added Visual Studio Code install to InstallRemote.ps1.
11. Added Git config file item. Also added function Copy-Git.

######################
#                    #
#      v1.3.0.6      #
#     June 2021      #